--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -1,3 +1,7 @@
+- defaults:
+    link:
+      relink: true
+
 - clean: ['~']
 
 - link:
@@ -7,5 +11,13 @@
         create: true
     ~/.zprofile: zprofile
     ~/.zshrc: zshrc
+
+- shell:
+  - [git submodule update --init --recursive, Installing submodules]
+
+- clean: ['~']
+
+- link:
+    ~/.gitconfig: gitconfig
 
 
