--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -16,9 +16,9 @@
     ~/.iterm2:
         path: iterm2
         create: true
-    ~/.oh-my-zsh:
+    ~/.oh-my-zsh/:
         create: true
-        path: oh-my-zsh/*
+        path: oh-my-zsh/**
 
 - shell:
   - [git submodule update --init --recursive, Installing submodules]
