--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -17,8 +17,7 @@
         path: iterm2
         create: true
     ~/.oh-my-zsh/:
-        create: true
-        path: oh-my-zsh/**
+        path: dotfiles/oh-my-zsh/**
 
 - shell:
   - [git submodule update --init --recursive, Installing submodules]
