--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -18,7 +18,7 @@
     ~/.iterm2:
         path: iterm2
         create: true
-    ~/.oh-my-zsh/: oh-my-zsh/**
+    ~/.oh-my-zsh/: oh-my-zsh
 
 - shell:
   - [git submodule update --init --recursive, Installing submodules]
